// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsView does display a warning 1`] = `
<div>
  <div
    class="sc-dJjYzT cEMJyA"
  >
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV sc-cxpSdN kxtdcs jesyJO"
        >
          WARNING
        </div>
        <h4
          class="sc-bYoBSM"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-ikJyIC"
            />
                   
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-kfPuZi"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-jIkXHa dbcfkZ"
        >
          xx3.Warning
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display a warning for GQL status codes 1`] = `
<div>
  <div
    class="sc-dJjYzT cEMJyA"
  >
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV sc-cxpSdN kxtdcs jesyJO"
        >
          WARNING
        </div>
        <h4
          class="sc-bYoBSM"
        >
          03N90: Cartesian product
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          The disconnected pattern 'p = ()--(), q = ()--()' builds a cartesian product. A cartesian product may produce a large amount of data and slow down query processing.
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-ikJyIC"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display multiple warnings 1`] = `
<div>
  <div
    class="sc-dJjYzT cEMJyA"
  >
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV sc-cxpSdN kxtdcs jesyJO"
        >
          WARNING
        </div>
        <h4
          class="sc-bYoBSM"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-ikJyIC"
            />
                   
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-kfPuZi"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-jIkXHa dbcfkZ"
        >
          xx3.Warning
        </code>
      </div>
    </div>
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV sc-cxpSdN kxtdcs jesyJO"
        >
          WARNING
        </div>
        <h4
          class="sc-bYoBSM"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-ikJyIC"
            />
               
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-kfPuZi"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-jIkXHa dbcfkZ"
        >
          yy3.Warning
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display multiple warnings for GQL status codes 1`] = `
<div>
  <div
    class="sc-dJjYzT cEMJyA"
  >
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV sc-cxpSdN kxtdcs jesyJO"
        >
          WARNING
        </div>
        <h4
          class="sc-bYoBSM"
        >
          03N90: Cartesian product
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          The disconnected pattern 'p = ()--(), q = ()--()' builds a cartesian product. A cartesian product may produce a large amount of data and slow down query processing.
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-ikJyIC"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV sc-cxpSdN kxtdcs jesyJO"
        >
          WARNING
        </div>
        <h4
          class="sc-bYoBSM"
        >
          01N50: Label does not exist
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          The label \`A\` does not exist. Verify that the spelling is correct.
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-ikJyIC"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
